--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <mat-drawer-content class=" border mainPanel">
       <div>
         <app-navbar (toggled)="drawer.toggle()"></app-navbar>
-        <div class="content container-fluid">
+        <div class="content container">
           <router-outlet></router-outlet>
         </div>
         <app-footer></app-footer>
