--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-sm-12 col-md-8">
     <div class="card">
-      <h4 class="card-header bg-dark text-light">Abonnés</h4>
+      <h4 class="card-header">Clients</h4>
       <div class="card-body menuB">
         <button mat-raised-button class="btn btn-success btn-sm " routerLink="/addClient">
-          Ajouter un abonné
+          Ajouter un client
         </button>
       </div>
       <div class="form-check-inline card-body">
@@ -44,40 +44,6 @@
         <button class="btn btn-group btn-danger" *ngIf="errorMessage">
           Cet utilisateur n'existe pas
         </button>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-12 col-md-4">
-    <div class="card">
-      <h4 class="card-header bg-dark text-light">Messages</h4>
-      <div class="card-body menuB">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="d-flex sm">
-              <button class="btn btn-outline-success" (click)="showSms()">Message groupé</button>
-              <button class="btn btn-outline-primary" (click)="showMail()">Mail groupé</button>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <form *ngIf="mail">
-              <mat-form-field class="form-group">
-                <textarea matInput placeholder="Ecrivez votre mail" type="text" name="" id="" cols="5"
-                  rows="5"></textarea>
-              </mat-form-field>
-              <button class=" btn btn-primary mat-raised-button">envoyer le mail</button>
-            </form>
-            <form *ngIf="sms">
-              <mat-form-field class="form-group">
-                <textarea matInput placeholder="Ecrivez votre sms" type="text" name="" id="" cols="5"
-                  rows="5"></textarea>
-              </mat-form-field>
-              <button class="btn btn-success mat-raised-button">envoyer le sms</button>
-
-            </form>
-          </div>
-
-        </div>
-
       </div>
     </div>
   </div>
