--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
-<div class="container border-top">
+<div class="container-fluid text-light border-top">
   <div class="row">
-    <div class="col-12">
-      Footer works
+    <div class="col-12 text-center">
+      Copyright © 2020 La Poste de Djibouti. Tous droits reservés
     </div>
   </div>
 </div>
