--- a/src/app/components/bp/bp.component.html
+++ b/src/app/components/bp/bp.component.html
@@ -1,1 +1,82 @@
-<p>bp works!</p>
+<div class="row d-flex justify-content-between">
+  <div class=" col-12 col-md-5 rounded border" *ngIf="!modify">
+    <h2>
+      <fa-icon [icon]="faBox"></fa-icon>
+      Profil de la boite
+    </h2>
+    <div class="card-body">
+      <mat-nav-list>
+        <mat-list-item> Numero: {{ Boite?.number }}</mat-list-item>
+        <mat-list-item> Type: {{ Boite?.type }} </mat-list-item>
+        <mat-list-item> Prix: {{ Boite?.price }} Fdj</mat-list-item>
+        <mat-list-item> Statut: Actif</mat-list-item>
+
+      </mat-nav-list>
+
+    </div>
+  </div>
+  <div class=" col-12 col-md-5 rounded border" *ngIf="modify">
+    <h2>
+      <fa-icon [icon]="faBox"></fa-icon>
+      Modifier le client
+    </h2>
+    <div class="card-body">
+      <mat-nav-list>
+        <mat-list-item class="card-header text-center">
+          <span>Numero: </span><input type="text" [value]="Boite?.number">
+        </mat-list-item>
+        <mat-list-item> Type: <input type="text" [value]="Boite?.type"></mat-list-item>
+        <mat-list-item> Prix: <input type="text" [value]="Boite?.price"></mat-list-item>
+      </mat-nav-list>
+
+    </div>
+  </div>
+</div>
+<mat-divider class="mt-2 mb-2"></mat-divider>
+
+<div class="row">
+  <div class="col-12">
+    <h2>
+      <fa-icon [icon]="faUser"></fa-icon>
+      Historique des locataires
+    </h2>
+    <div class="table">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nom</th>
+            <th scope="col">Attribuer le</th>
+            <th scope="col">Resilier le</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Ismael</td>
+            <td>Octobre 2017</td>
+            <td>Non resilié</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Degmo</td>
+            <td>Fevrier 2013 </td>
+            <td>Mars 2016</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Hassan</td>
+            <td>Janvier 2009 </td>
+            <td> Octobre 2013</td>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
+            <td>Ismael</td>
+            <td>Juin 2006 </td>
+            <td>Septembre 2008</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
