--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
   <div class="row justify-content-center">
-    <div class="col-12 text-center mt-5">
+    <div class="col-12 text-center">
       <img class="mx-2" src="../../../assets/logo.png" width="50" alt="La poste logo" />
 
     </div>
