--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -7,10 +7,13 @@
 }
 .logout {
     color: #0c3da2;
-    border: red solid 1px;
 }
 
 .menu {
   color: #0c3da2;
 
+}
+.agent {
+    color: #0c3da2;
+    font-size: large;
 }
