--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
           </a>
         </mat-list-item>
         <mat-list-item class="nav-item">
-          <a routerLink="/profile" class="d-flex menu" (click)="close()">
+          <a routerLink="/profil" class="d-flex menu" (click)="close()">
             <fa-icon [icon]="faCog" class="mr-2"></fa-icon>
             <p>Mon profil</p>
           </a>
