--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 p-4 text-right">
-      <fa-icon [icon]="faTimes" (click)="close()" class="remove btn-group btn p-1"></fa-icon>
+      <fa-icon [icon]="faTimes" (click)="close()" class="remove btn mr-2 p-1"></fa-icon>
       <div class="logo d-flex menu align-items-center">
         <img width="70" class="img-fluid mr-2" src="assets/logo.png">
         <span class="h2">𝕃𝕒 ℙ𝕠𝕤𝕥𝕖</span>
