--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
     <div class="col-12">
       <mat-list>
         <mat-mat-list-item class="nav-item">
-          <a class="d-flex menu align-items-center mb-3" (click)="close()">
+          <a class="d-flex menu align-items-center mb-3">
             <img src="../../../assets/agent.png" width="30" alt="">
             <span class="agent">Houssein Bodeh</span>
           </a>
